# llm-comparison

./: .gitignore  AGENTS.md  LICENSE  README.md  compare_models.py  compare_models_core.py  compare_models_template.py  convert_results.py  index.html  input.txt  model_comparison.html  pyproject.toml  results.csv  results.md  update-gh-pages.ps1  update_artificial_analysis.py
.codex/skills/github-pages-publisher/: SKILL.md
.codex/skills/github-pages-publisher/scripts/: update-gh-pages.ps1
.omp/: skill-usage.json
.omp/scripts/: save-plan.py  skill-usage-manager.py  worktree-flow.py
.omp/skills/audit-worktree/: SKILL.md
.omp/skills/github-pages-publisher/: SKILL.md
.omp/skills/implement-worktree/: SKILL.md
.omp/skills/merge-conflict-resolver/: SKILL.md
.omp/worktree-flow/auto-update-artificial-analysis-data-plan/: plan.md
.omp/worktree-flow/auto-update-artificial-analysis-data-plan-20260623-160812/: audit-final-response.md  audit-summary.md  implementation-final-response.md  implementation-summary.md  workflow-state.json  workflow.jsonl
data/: input.txt  results.csv  results.md
tests/: test_compare_models.py  test_convert_results.py  test_update_artificial_analysis.py
