[project]
name = "llm-comparison"
version = "0.1.0"
description = "Tools for converting and comparing Artificial Analysis LLM leaderboard data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[tool.setuptools]
py-modules = [
    "compare_models",
    "compare_models_core",
    "compare_models_template",
    "convert_results",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"compare_models_template.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
